# schema_mining

./: .gitignore  CMakeLists.txt  Makefile
mining_extension/: .gitignore  test.sql  todo.txt
mining_extension/src/: filt.cpp  get_entropy.cpp  hash_list.cpp  lift.cpp  lift_exact.cpp  prune.cpp  quack_extension.cpp  sum.cpp  sum_dict.cpp  sum_no_lift.cpp
src/: main.cpp
